--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,28 @@
 @import "global-styles.scss";
 @import "mixins.scss";
 @import "fonts.scss";
+@import "wrapper.scss";
+@import "header.scss";
+@import "main.scss";
+@import "main-intro.scss";
+@import "main-info.scss";
+@import "info-form.scss";
+@import "form-list.scss";
+@import "form-item.scss";
+@import "main-tech.scss";
+@import "tech-form.scss";
+@import "tech-item.scss";
+@import "inner-list.scss";
+@import "inner-item.scss";
+@import "main-level.scss";
+@import "level-list.scss";
+@import "level-item.scss";
+@import "main-about.scss";
+@import "about-form.scss";
+@import "main-plans.scss";
+@import "plans-form.scss";
+@import "plans-list.scss";
+@import "plans-item.scss";
+@import "footer.scss";
+@import "footer-date.scss";
+@import "date-form.scss";
