--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,73 +1,16 @@
-$mobile: 360px;
-$iphone: 414px;
-$mobile-hd: 480px;
-$tablets: 768px;
-$laptop: 1024px;
-$large-laptop: 1280px;
-$widebooks: 1366px;
-$widebooks-hd: 1440px;
-$large-widebooks: 1600px;
-$hd: 1920px;
-$fhd: 2560px;
+$bg-body: #797979;
 
-$bg-header: #ff6700;
-$bg-body: #f6d336;
-$bg-black: #000000;
-$bg-footer: #37474f;
-$bg-border: #212121;
-$bg-menu: #ffa000;
-$bg-darkred: #ad1e23;
-$bg-orange: #ffb300;
-$bg-enter: #f50057;
-$bg-slider-small: #33691e;
+$text-black: #000000;
+$text-brown: #2f1b15;
+$text-gray: #3d3d3d;
+$text-lightgray: #231f20;
 
-$bg-header-popup: #ffb74d;
-$bg-help-popup: #33691e;
-
-$social-hover: #76ff03;
-$color-fb: #2661CD;
-$color-vk: #3B5E8C;
-$color-lightgreen: #22B454;
-$color-darkgreen: #22b24c;
-$border-logo: #8dc63f;
-
-$btn-active: #ffffff;
-$btn-pressed: #000000;
-
-$text-black: #212121;
-$text-white: #ffffff;
-$text-gray: #37474f;
-$text-purple: #7f4796;
-$text-red: #d43b3a;
-$text-green: #76ff03;
-
-$hover-color: #76ff03;
-
-/*Стили для плеера*/
-$bg-player: #ffc400;
-$bg-controls: #78909c;
-$bg-status: #f44336;
-/*Цвета кнопок плеера*/
-$bg-play: #64dd17;
-$bg-rec: #ff5252;
-$bg-pause: #81d4fa;
-$bg-stop: #29b6f6;
-$bg-help: #9ccc65;
-$bg-send: #64dd17;
-$bg-listen: #42a5f5;
-$bg-repeat: #ff5252;
-
-/*цвет для кнопки отправки формы*/
-$bg-submit: #64dd17;
-
-$bold-font: "NEXT_Bold", sans-serif;
-$regular-font: "NEXT_Regular", sans-serif;
-$alternate-font: "NEXT_SemiBold", sans-serif;
-$footer-font: "GothamExtraLight", sans-serif;
+$main-font: "PT Sans", sans-serif;
+$alternate-font: "Courier", sans-serif;
 
 $base-font-color: #000;
 $base-font-size: 16px;
 $base-font-weight: normal;
 
 $baseFontColor: $text-black;
-$baseFontFamily: $bold-font;
+$baseFontFamily: $main-font;
