--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,31 +1,7 @@
 @font-face {
-	font-family: 'NEXT_Bold';
-	src: url('../fonts/NEXT ART_Bold.eot');
-	src: local('☺'), url('../fonts/NEXT ART_Bold.woff') format('woff'), url('../fonts/NEXT ART_Bold.ttf') format('truetype'), url('../fonts/NEXT ART_Bold.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'NEXT_SemiBold';
-	src: url('../fonts/NEXT ART_SemiBold.eot');
-	src: local('☺'), url('../fonts/NEXT ART_SemiBold.woff') format('woff'), url('../fonts/NEXT ART_SemiBold.ttf') format('truetype'), url('../fonts/NEXT ART_SemiBold.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'GothamExtraLight';
-	src: url('../fonts/GothamExtraLight.eot');
-	src: local('☺'), url('../fonts/GothamExtraLight.woff') format('woff'), url('../fonts/GothamExtraLight.ttf') format('truetype'), url('../fonts/GothamExtraLight.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'NEXT_Regular';
-	src: url('../fonts/NEXT ART_Regular.eot');
-	src: local('☺'), url('../fonts/NEXT ART_Regular.woff') format('woff'), url('../fonts/NEXT ART_Regular.ttf') format('truetype'), url('../fonts/NEXT ART_Regular.svg') format('svg');
+	font-family: 'Courier';
+	src: url('../fonts/cour.eot');
+	src: local('☺'), url('../fonts/cour.woff') format('woff'), url('../fonts/cour.ttf') format('truetype'), url('../fonts/cour.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
