--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 @import "form-item.scss";
 @import "main-tech.scss";
 @import "tech-form.scss";
+@import "tech-list.scss";
 @import "tech-item.scss";
 @import "inner-list.scss";
 @import "inner-item.scss";
