--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -4,6 +4,7 @@ $text-black: #000000;
 $text-brown: #2f1b15;
 $text-gray: #3d3d3d;
 $text-lightgray: #231f20;
+$text-blue: #1f5f97;
 
 $main-font: "PT Sans", sans-serif;
 $alternate-font: "Courier", sans-serif;
