--- a/sass/wrapper.scss
+++ b/sass/wrapper.scss
@@ -1,7 +1,9 @@
 .wrapper {
-  margin: 0 auto;
   width: 100%;
   max-width: 1000px;
+
+  margin: 0 auto;
+  padding: 70px 113px;
 
   background-image: url('../img/pattern.png');
   background-repeat: repeat;
