--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,5 +27,4 @@
 @import "plans-list.scss";
 @import "plans-item.scss";
 @import "footer.scss";
-@import "footer-date.scss";
-@import "date-form.scss";
+@import "footer-form.scss";
