--- a/sass/main-intro.scss
+++ b/sass/main-intro.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 
   &__title {
     width: 221px;
@@ -18,5 +18,6 @@
     background-position: top center;
 
     margin: 0;
+    margin-left: -43px;
   }
 }
