--- a/sass/info-form.scss
+++ b/sass/info-form.scss
@@ -6,5 +6,11 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  margin-bottom: 68px;
+  margin-bottom: 30px;
+}
+
+@media only screen and (min-width: $laptop) {
+  .info-form {
+    margin-bottom: 68px;
+  }
 }
