--- a/sass/main-tech.scss
+++ b/sass/main-tech.scss
@@ -6,11 +6,11 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  padding-bottom: 51px;
+  padding-bottom: 20px;
 
   &__title {
     font: {
-      size: 1.5em;
+      size: 1.25em;
       family: $main-font;
       weight: 700;
     }
@@ -19,20 +19,48 @@
     color: $text-brown;
 
     margin-top: 0;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
   &__description {
     font: {
-      size: 0.938em;
+      size: 0.75em;
       family: $main-font;
       weight: 400;
     }
 
-    line-height: 1.438em;
+    line-height: 1.25em;
     color: $text-gray;
 
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: $laptop) {
+  .main-tech {
+    padding-bottom: 51px;
+
+    &__title {
+      font: {
+        size: 1.5em;
+      }
+
+      margin-bottom: 12px;
+    }
+
+    &__description {
+      font: {
+        size: 0.938em;
+      }
+
+      line-height: 1.438em;
+
+      margin-bottom: 30px;
+
+      max-width: 770px;
+    }
   }
 }
