--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -4,7 +4,11 @@
   cursor: pointer;
 
   position: relative;
-  padding-left: 25px;
+  padding-left: 40px;
+
+  @media only screen and (min-width: $laptop) {
+    padding-left: 25px;
+  }
 }
 
 @mixin custom-checkbox {
@@ -25,7 +29,7 @@
 @mixin checkbox-checked {
   content: "";
   position: absolute;
-  top: -5px;
+  top: -10px;
   left: 3px;
   display: block;
   width: 21px;
@@ -34,6 +38,11 @@
   background-image: url('../img/tick.png');
   background-size: 21px 27px;
   background-repeat: no-repeat;
+
+  @media only screen and (min-width: $laptop) {
+    top: -5px;
+    left: 3px;
+  }
 }
 
 @mixin radio-default {
@@ -93,18 +102,23 @@
 
   width: 19px;
   height: 18px;
-  top: 6px;
+  top: -1px;
   left: 0;
 
   background-image: url('../img/checkbox.png');
   background-size: 19px 18px;
   background-repeat: no-repeat;
+
+  @media only screen and (min-width: $laptop) {
+    top: 6px;
+    left: 0;
+  }
 }
 
 @mixin checkbox-checked-eng {
   content: "";
   position: absolute;
-  top: -4px;
+  top: -11px;
   left: 3px;
   display: block;
   width: 21px;
@@ -113,6 +127,11 @@
   background-image: url('../img/tick.png');
   background-size: 21px 27px;
   background-repeat: no-repeat;
+
+  @media only screen and (min-width: $laptop) {
+    top: -4px;
+    left: 3px;
+  }
 }
 
 @mixin soft-animation {
